[gd_scene load_steps=20 format=1]

[ext_resource path="res://UI/InGameUI.gd" type="Script" id=1]
[ext_resource path="res://UI/Style/Theme-UI.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/UI/Intercation-icon.png" type="Texture" id=3]
[ext_resource path="res://UI/DialogPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/UI/Discard-panel.png" type="Texture" id=5]
[ext_resource path="res://Fonts/palatino-regular.fnt" type="BitmapFont" id=6]
[ext_resource path="res://Sprites/UI/card-discard-hovered.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/card-discard.png" type="Texture" id=8]
[ext_resource path="res://Fonts/palatino-bold-italic.fnt" type="BitmapFont" id=9]
[ext_resource path="res://Tutorial.tscn" type="PackedScene" id=10]
[ext_resource path="res://Sounds/bouton_dinteraction.wav" type="Sample" id=11]

[sub_resource type="Animation" id=1]

length = 1.0
loop = false
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 390, 575 ), Vector2( 30, 180 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect/scale")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.66, 0.66 ), Vector2( 0.78, 0.78 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:columns")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 12, 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:custom_constants/hseparation")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 100, 250 ]
}

[sub_resource type="StyleBoxTexture" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 5 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 7 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 8 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 8 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="SampleLibrary" id=8]

samples/interact = {
"db": -15.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 11 )
}

[node name="InGameUI" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="InteractionButton" type="MenuButton" parent="."]

visibility/light_mask = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 865.0
margin/top = 32.0
margin/right = 990.0
margin/bottom = 57.0
custom_colors/font_color_disabled = Color( 0.339844, 0.339844, 0.339844, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
disabled = true
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "E to interact"
icon = ExtResource( 3 )
flat = false
items = [  ]

[node name="DialogPanel" parent="." instance=ExtResource( 4 )]

[node name="InputWrapper" type="HBoxContainer" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 320.0
margin/top = 520.0
margin/right = 480.0
margin/bottom = 550.0
alignment = 0

[node name="InputField" type="LineEdit" parent="InputWrapper"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 144.0
margin/bottom = 30.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Submit" type="Button" parent="InputWrapper"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 148.0
margin/top = 0.0
margin/right = 160.0
margin/bottom = 30.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="ImportantHand" type="HBoxContainer" parent="."]

rect/scale = Vector2( 0.66, 0.66 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -4.0
margin/top = 575.0
margin/right = 328.0
margin/bottom = 875.0
custom_constants/separation = 100
alignment = 0

[node name="Hand" type="GridContainer" parent="."]

visibility/light_mask = 0
rect/scale = Vector2( 0.66, 0.66 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 654.0
margin/top = 575.0
margin/right = 1281.0
margin/bottom = 835.0
custom_constants/vseparation = 300
custom_constants/hseparation = 100
columns = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hand"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/bring_up = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="DiscardPanel" type="Panel" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 172.0
margin/top = 16.0
margin/right = 822.0
margin/bottom = 103.0
custom_styles/panel = SubResource( 2 )

[node name="DiscardLabel" type="Label" parent="DiscardPanel"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 12.0
margin/top = 33.0
margin/right = 357.0
margin/bottom = 52.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.8, 0.8, 0.8, 1 )
text = "DISCARD LABEL"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DiscardButton" type="Button" parent="DiscardPanel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 527.0
margin/top = 25.0
margin/right = 630.0
margin/bottom = 63.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 9 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Discard"
flat = false

[node name="Tutorial" parent="." instance=ExtResource( 10 )]

visibility/visible = false

[node name="Book" parent="Tutorial"]

editor/display_folded = true
margin/left = 344.0
margin/top = 68.0
margin/right = 844.0
margin/bottom = 268.0

[node name="Cards" parent="Tutorial"]

editor/display_folded = true
margin/left = 385.0
margin/top = 466.0
margin/right = 885.0
margin/bottom = 666.0

[node name="Arrow" parent="Tutorial/Cards"]

margin/top = 131.0
margin/bottom = 281.0

[node name="Interaction" parent="Tutorial"]

editor/display_folded = true
margin/left = 472.0
margin/right = 972.0

[node name="Arrow" parent="Tutorial/Interaction"]

rect/rotation = 90.0
margin/left = 501.0
margin/top = 91.0
margin/right = 651.0
margin/bottom = 241.0

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 8 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="pressed" from="InteractionButton" to="." method="_on_InteractionButton_pressed"]

[connection signal="pressed" from="DiscardPanel/DiscardButton" to="." method="_on_DiscardButton_pressed"]


[editable path="Tutorial"]
